# derive_empty_traits

./: Cargo.toml
src/: lib.rs
